# guardrails

./: .gitignore  Cargo.toml  Dockerfile.darwin  Makefile  README.md  SIGNING-INFO.md  build.rs  install.sh  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
assets/icons/: guardrails.icns
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SIGNING-INFO.md
examples/: gh-api-safe.txt  gh-api-safety-canary.txt  run-gh-api-canary-demo.sh
npm/scripts/: postinstall.js
src/: checker.rs  cli.rs  filter.rs  main.rs  runner.rs
tests/: guardrails_cli.rs
