[package]
name = "guardrails"
version = "0.1.3"
edition = "2024"
description = "Native CLI wrapper that blocks prompt-injection output from other CLIs"
license = "MPL-2.0"

[[bin]]
name = "guardrails"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
